Added CSS that I learnt

--- a/index.html
+++ b/index.html
@@ -2,14 +2,18 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width-device-width" initial-scale="1.0">
         <title>Student portal</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>HTML SCHOOL</h1>
         <main>
             <h2><strong>Welcome</strong></h2>
-            <img src="www.pic.com" alt="School logo">
-            <p>Please enter your login details below</p>
+            <div class="school-logo"></div>
+            
+            <p class="direction">Please enter your login details below</p>
+            <div class="loginport">
             <section>
                 <form action="www.submit/submit-url">
                     <fieldset>
@@ -18,9 +22,9 @@
                     </fieldset>
                     <fieldset>
                         <label for="passcode"><strong>Password:</strong></label>
-                        <input type="password" id="passcode"  placeholder="should be a valid password" required>
+                        <input type="password" id="passcode"  placeholder="password" required>
                     </fieldset>
-                    <fieldset>
+                    <fieldset class="radio">
                         <label for="student"><strong>Student</strong></label>
                         <input type="radio" id="student"  name="student-staff" required>
                         <label for="employee"><strong>Staff</strong></label>
@@ -32,7 +36,9 @@
                     </fieldset>
                 </form>
             </section>
+        </div>
         </main>
+        <legend></legend>
         <footer>
             <p>Copyright <a href="www.kk.com">-kkipkorir.org</a></p>
         </footer>
