Added and styled the header element

--- a/index.html
+++ b/index.html
@@ -7,10 +7,26 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <header>
+        <div class="title-logo">
         <h1>HTML SCHOOL</h1>
+        <div class="school-logo"></div>
+        </div>
+        <div class="nav-comp">
+        <nav>
+            <ul>
+                <li><a>About</a></li>
+                <li><a>Team</a></li>
+                <li><a>Login</a></li>
+                <li><a>Donate</a></li>
+                <li><a>Contact</a></li>
+            </ul>
+        </nav>
+         </div>
+        </header>
         <main>
             <h2><strong>Welcome</strong></h2>
-            <div class="school-logo"></div>
+            
             
             <p class="direction">Please enter your login details below</p>
             <div class="loginport">
